--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-course",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -23,5 +23,5 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
-  }"homepage": ""
+  }
 }
